# Note_server

./: api.php  config.php  config.py  files.py  home.php  index.html  index.php  install_note_server.sh  install_server.sh  layout.php  login.php  logout.php  main.py  notes.php  notes.py  profile.php  scripts.js  server.py  set.conf  storage.py  styles.css  subtasks.py  tasks.php  tasks.py  update_app.sh  update_note_server.sh  users.py  utils.php  utils.py  welcome.php
client/: CMakeLists.txt  main.cpp  notesapp.pro
client/android/: AndroidManifest.xml  CMakeLists.txt
