cmake_minimum_required(VERSION 3.20)
project(NotesApp LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets Network AndroidExtras)
qt_standard_project_setup()
add_executable(NotesApp main.cpp)
target_link_libraries(NotesApp PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Network Qt6::AndroidExtras)
qt_finalize_target(NotesApp)